# sovreign-reddit

./: Cargo.toml  deps.txt
crates/celestia-adapter/: Cargo.toml
crates/celestia-adapter/src/: celestia.rs  da_service.rs  shares.rs  types.rs
crates/celestia-adapter/src/verifier/: address.rs
crates/provers/risc0/: Cargo.toml
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/reddit/: Cargo.toml
crates/reddit/src/: address.rs  call.rs  genesis.rs  hooks.rs  lib.rs  offchain.rs  post.rs  query.rs  subreddit.rs  user.rs  utils.rs
crates/risc0-adapter/: Cargo.toml
crates/risc0-adapter/src/: host.rs  lib.rs
crates/rollup/: Cargo.toml
crates/rollup-config/: Cargo.toml
crates/rollup-config/src/: lib.rs
crates/rollup/risc0-prover/: Cargo.toml  build.rs
crates/rollup/risc0-prover/guest-celestia/: Cargo.toml
crates/rollup/src/: celestia_rollup.rs  common.rs  lib.rs  register_rpc.rs
crates/sov-core/: Cargo.toml
crates/sov-core/src/common/: address.rs
crates/sov-core/src/storage/: cache.rs  mod.rs
crates/stf/: Cargo.toml
crates/stf/src/: genesis_config.rs  hooks_impl.rs  lib.rs  runtime.rs  stf_blueprint.rs
crates/stf/src/kernels/: basic.rs
