[package]
name = "celestia-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.12"
celestia-proto = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "1fa61eb" }
celestia-rpc = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "1fa61eb", default-features = false, optional = true }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "1fa61eb", default-features = false }
tendermint = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "1f8b574", default-features = false }
tendermint-proto = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "1f8b574" }
nmt-rs = { git = "https://github.com/Sovereign-Labs/nmt-rs.git", rev = "d821332", features = [
  "serde",
  "borsh",
] }

sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }

anyhow = "1.0.98"
thiserror = "2.0.12"
borsh = { version = "0.10.3", features = ["rc"], optional = true }

tracing = "0.1.41"
jmt = "0.11.0"
hex = "0.4.3"
clap = {version="4.5.38", optional=true}
schemars = "0.8.22"
serde = { version = "1", features = ["derive"] , optional=true}
serde_json = {version="1" , optional=true}

jsonrpsee = {version="0.20.2",features = ["http-client", "server"], optional = true }

tokio = {version="1.45.1", optional=true}
risc0-zkvm = {version="0.18.0", optional=true}
risc0-zkvm-platform = {version="0.18.0", optional=true}
async-trait = "0.1.88"
sha2 = "0.10.9"

[dev-dependencies]
wiremock = "0.5"
postcard = { version = "1", features = ["use-std"] }
proptest = { version = "1.3" }



[features]
default = ["native"]
native = [
  "dep:tokio",
  "dep:jsonrpsee",
  "dep:serde_json",
  "dep:serde",
  "dep:celestia-rpc",
  "tendermint/default",
  "sov-rollup-interface/native",
  "borsh"
]
risc0 = [
  "dep:risc0-zkvm",
  "dep:risc0-zkvm-platform"
]

verifier = []
