[package]
name = "reddit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
borsh = { version = "0.10.3", features = ["bytes"], optional = true }
clap = "4.5.38"
schemars = "0.8.22"
serde = { version = "1", features = ["derive"] , optional=true}
serde_json = {version="1" , optional=true}

sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable",  features = ["macros"] }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }

[features]
default = ["native"]
serde = ["dep:serde", "dep:serde_json"]
native = ["serde", "sov-state/native", "sov-modules-api/native"]
borsh = ["dep:borsh"]
