[package]
name = "reddit"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = {version ="1.17.0" , features=["v4"]}

anyhow = {workspace = true}
borsh = {workspace = true , optional=true}
clap = {workspace = true}
jsonrpsee = {workspace = true, optional=true}
serde = {workspace = true , optional=true}
serde_json = {workspace = true , optional=true}
sov-modules-api = {workspace = true}
sov-modules-macros = {workspace = true , features =["native"]}
sov-state = {workspace = true}
reqwest = "0.12.15"
tokio = {workspace = true , optional=true}
schemars = "0.8.19"

[features]
default = ["native"]
offchain=["tokio"]
serde = ["dep:serde", "dep:serde_json"]
borsh = ["dep:borsh"]
native = ["serde", "borsh", "sov-state/native", "sov-modules-api/native", "sov-modules-macros/native", "offchain" ,"jsonrpsee"]
