[package]
name = "risc0-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.13.1"
once_cell = { version = "1.7.2", optional = true }
parking_lot = { version = "0.12.1", optional = true }
anyhow = "1.0.98"
serde = { version = "1", features = ["derive"] , optional=true}
serde_json = {version="1" , optional=true}
bincode = "1.3.3"
risc0-zkvm = "0.18.0"
risc0-zkvm-platform = "0.18.0"
risc0-zkp = {version = "0.18.0" , optional=true}
risc0-circuit-rv32im = {version="0.18.0" , optional=true}

sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-zk-cycle-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }


[features]
default = ["native"]
native = ["risc0-zkvm/prove", "dep:risc0-zkp", "dep:risc0-circuit-rv32im" , "serde" ,    "serde_json"]