[package]
name = "rollup"
version = { workspace = true }
edition = { workspace = true }



[dependencies]
sov-modules-api = { workspace = true, features = ["native"] }
sov-state = { workspace = true }
sov-prover-storage-manager = { workspace = true }
sov-accounts = { workspace = true, features = ["native"] }
sov-bank = { workspace = true, features = ["native"] }
sov-ledger-rpc = { workspace = true, features = ["server"] }
sov-sequencer-registry = { workspace = true, features = ["native"] }
sov-modules-rollup-blueprint = { workspace = true }
sov-modules-stf-blueprint = { workspace = true, features = ["native"] }
sov-stf-runner = { workspace = true, features = ["native"] }
sov-cli = { workspace = true, optional = true }

sov-db = { workspace = true }
sov-sequencer = { workspace = true }
sov-rollup-interface = { workspace = true }
sov-celestia-adapter = { workspace = true}
rollup-config = {path = "../rollup-config"}
anyhow = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }

stf = { path = "../stf", features = ["native"] }
risc0-starter = { path = "../provers/risc0" }

sov-risc0-adapter = { workspace = true, features = ["native"] }

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "starter-cli-wallet"
path = "src/bin/starter_cli_wallet.rs"
