[package]
name = "sov-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version="1.0.62", optional=true}
borsh = { version = "0.10.3", features = ["rc"], optional = true }
clap = {version="4.5.38", optional=true}
jsonrpsee = {version="0.25.1", features = ["macros", "client-core", "server"], optional = true }
schemars = {version="0.8.22", optional=true}
serde = { version = "1", features = ["derive"] , optional=true}
serde_json = {version="1" , optional=true}
uuid = {version ="1.17.0" , features=["v4"]}
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly",  default-features = false  }
sov-modules-macros = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly", default-features = false }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly", default-features = false }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly", default-features = false }
arbitrary = {version="1.4.1", optional=true}
bech32 = {version="0.9.1", optional=true}
derive_more = {version="2.0.1", optional=true , features = ["display", "into"]}
digest = {version="0.10.7", optional=true}
hex = {version="0.4.3", optional=true}
jmt = {version="0.11.0", optional=true}
proptest = {version="1.6.0", optional=true}
proptest-derive = {version="0.5.1", optional=true}
sha2 = {version="0.10.9", optional=true}
thiserror = {version="2.0.12", optional=true}




[features]
default = ["std"]
arbitrary = [
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
    "proptest/default",
    "std",
]
native = []
serde = ["dep:serde", "dep:serde_json"]
std = [
    "anyhow/default",
    "bech32/default",
    "borsh/default",
    "derive_more/default",
    "digest/default",
    "hex/default",
    "jmt",
    "schemars",
    "serde/default",
    "sha2/default",
    "sov-rollup-interface/default",
    "sync",
    "thiserror",
    "serde"
    
]
sync = [
    "borsh/rc",
    "serde/rc",
]
mocks = []
