[package]
name = "stf"
version = "0.1.0"
edition = "2021"

[dependencies]
sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable" , features=["native"]}
sov-modules-macros = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable" }
sov-zk-cycle-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-zk-cycle-macros = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-chain-state  = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-blob-storage = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-modules-stf-template = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-value-setter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-cli = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
anyhow = "1.0.98"
thiserror = "2.0.12"
borsh = { version = "0.10.3", features = ["rc"], optional = true }

tracing = "0.1.41"
jmt = "0.11.0"
hex = "0.4.3"

clap = {version="4.5.38", optional=true}
schemars = "0.8.22"
serde = { version = "1", features = ["derive"] , optional=true}
serde_json = {version="1" , optional=true}

jsonrpsee = {version="0.20.2",features = ["http-client", "server"], optional = true }
reddit = {path = "../reddit" }
[features]
default = ["native"]
borsh = ["dep:borsh"]
native = ["sov-state/native", "sov-modules-api/native", "jsonrpsee", "sov-chain-state/native", "sov-blob-storage/native" , "sov-stf-runner/native", "sov-value-setter/native" ,
    "clap",
    "serde",
        "jsonrpsee",
    "serde_json",
"borsh"]
