[package]
name = "sov-reddit-guest-celestia"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.68"
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.19.1"
stf={path="../../../stf"}


risc0-adapter = {path = "../../../risc0-adapter"}
rollup-config = {path = "../../../rollup-config"}
celestia-adapter = {path = "../../../celestia-adapter"}
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }
sov-modules-stf-template = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "stable", default-features = false }





[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = []
